--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,9 @@
 .App {
+  width: 40%;
+  margin: auto;
+}
+
+.header{
   text-align: center;
 }
 
@@ -27,6 +32,7 @@
 .App-link {
   color: #61dafb;
 }
+
 
 @keyframes App-logo-spin {
   from {
